--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -222,7 +222,6 @@ body {
           padding: 1.25rem;
           border-radius: 50%;
           background-position: center;
-          background-image: url(/assets/images/icons/chevron-dark.svg);
           background-repeat: no-repeat;
           transform: rotate(180deg);
           box-shadow: 0 5px 16px 5px rgba(226, 224, 226, 0.2),
@@ -508,7 +507,7 @@ body {
             box-shadow: 0 8px 16px 0 rgba(99, 102, 241, 0.19),
               0 6px 20px 0 rgba(99, 102, 241, 0.19);
             background-color: var(--clr-primary);
-            background-image: url("/assets/images/icons/chevron.svg");
+            background-image: var(--bg-img-chevron-not-collapsed);
             transform: rotate(0deg);
           }
 
@@ -522,7 +521,7 @@ body {
           padding: 1.25rem;
           border-radius: 50%;
           background-position: center;
-          background-image: url("/assets/images/icons/chevron-dark.svg");
+          background-image: var(--bg-img-chevron-collapsed);
           transform: rotate(180deg);
         }
 
